reworked Value to be faster